syntax = "proto3";

package helloworld;

service Greeter {
  rpc SayHello (HelloRequest) returns (HelloReply) {}
}

message HelloRequest {
  string name = 1;
  bool informal = 2;
}

message HelloReply {
  string message = 1;
  float secondsTaken = 2;
}
